[package]
name = "gxi"
version = "0.2.0"
edition = "2018"
authors = ["Brian Vincent <brainn@gmail.com>"]
homepage = "https://github.com/bvinc/gxi"
description = "GTK frontend, written in Rust, for the xi editor"
repository = "https://github.com/bvinc/gxi"
keywords = ["gxi", "xi"]
categories = ["editor"]
license = "MIT"
license-file = "LICENSE"


[dependencies]
cairo-rs = "0.8"
clap = "2.31"
dirs-next = "1.0"
env_logger = "0.7"
failure = "0.1"
gdk = "0.12"
gio = "0.8"
glib = "0.9"
glib-sys = { version = "0.9", features = ["v2_44"] }
gobject-sys = "0.9"
gtk = { version = "0.8", features = ["v3_18"] }
gtk-sys = { version = "0.9", features = ["v3_18"] }
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
mio = { version = "0.7", features = ["os-util"] }
pango = { version = "0.8", features = ["v1_38"] }
pangocairo = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
servo-fontconfig = "0.5"
xi-core-lib = { git = "https://github.com/google/xi-editor", rev = "65911d9" }
xi-rpc = { git = "https://github.com/google/xi-editor", rev = "65911d9" }

[profile.release]
lto = true
codegen-units = 1